k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-training
  labels:
    managed-by: argocd
    team: platform
