k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-app-svc
  namespace: devops-training
  labels:
    app: training-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"         
spec:
  selector:
    app: training-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
